docs: add setup instructions for FlatLaf library in IntelliJ IDE